--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "city-timezones": "^1.3.2",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
